# smartops-openenv

./: .gitignore  Dockerfile  README.md  api.py  app.py  docker-compose.yml  inference.py  main.py  openenv.yaml  pyproject.toml  requirements-rl.txt  requirements.txt  setup.py
agents/: __init__.py  escalation.py  response.py  triage.py
api/: __init__.py  main.py
docs/: index.html
env/: __init__.py  agents.py  graders.py  graders_backup.py  gym_wrapper.py  models.py  multi_agent_env.py  smart_ops_env.py  tasks.py
scripts/: eval_rl.py  run_baseline.py  run_multiagent.py  train_rl.py
server/: __init__.py  app.py
smartops/: dummy.py  main.py
tasks/: __init__.py  action_recommendation.py  definitions.py  email_classification.py  graders.py  urgency_detection.py
tests/: test_task_graders.py
